<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FA151515"
    android:padding="20dp"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbarSize="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/robot_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="30dp"
                    android:padding="0dp"
                    android:layout_alignParentBottom="true"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/education_100" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/home_robot_animation"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:padding="0dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    app:layout_constraintEnd_toStartOf="@+id/lottieAnimationView"
                    app:layout_constraintStart_toEndOf="@+id/lottieAnimationView2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/robot_100_100" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="0dp"
                    android:layout_marginEnd="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/money_100" />
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="50dp"
                android:id="@+id/progress_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/container_explanation"
                android:padding="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/robot_view">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/education_icon" />
                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        app:indicatorColor="#90B7F3"
                        app:trackCornerRadius="10dp"
                        android:progress="20"
                        app:trackColor="#9990B7F3"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/money_icon" />
                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        app:indicatorColor="#85BB65"
                        app:trackCornerRadius="10dp"
                        android:progress="20"
                        app:trackColor="#9985BB65"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginVertical="6dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/body_icon" />
                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        app:indicatorColor="#FF0043"
                        app:trackCornerRadius="10dp"
                        android:progress="20"
                        app:trackColor="#99FF0043"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginVertical="6dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/fun_icon" />
                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        app:indicatorColor="#FE7F23"
                        app:trackCornerRadius="10dp"
                        android:progress="20"
                        app:trackColor="#99FE7F23"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/progress_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/create_habit_button"
                    android:text="@string/menu_mind_goal"
                    android:textColor="@color/white"
                    android:theme="@style/mindButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/create_habit_button"
                    android:text="@string/menu_money_goal"
                    android:textColor="@color/white"
                    android:theme="@style/moneyButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/create_habit_button"
                    android:text="@string/menu_body_goal"
                    android:textColor="@color/white"
                    android:theme="@style/bodyButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/create_habit_button"
                    android:text="@string/menu_fun_goal"
                    android:textColor="@color/white"
                    android:theme="@style/funButton"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:layout_gravity="center"
                    android:focusable="true"
                    android:clickable="true"
                    android:textSize="18sp"
                    android:text="@string/menu_show_explanation"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>